--- a/src/main/webapp/VAADIN/themes/theme1/styles.css
+++ b/src/main/webapp/VAADIN/themes/theme1/styles.css
@@ -1158,8 +1158,8 @@ body .theme1.v-app .v-app-loading {
 }
 
 .theme1 .v-disabled {
-    opacity: 1;
-    filter: alpha(opacity=100);
+    opacity: 0.5;
+    filter: alpha(opacity=50);
     cursor: default;
 }
 
@@ -6099,5 +6099,9 @@ body .theme1.v-app .v-app-loading {
 .v-select-error { border-color: red !important; }
 
 .alignButtonDown .v-button-wrap { 
+    margin-top: 15px;
+}
+
+.margintop15px {
     margin-top: 15px;
 }
